--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs the code in an Apache/PHP web server container
     - name: Startup web server
-      run: docker run -v $(pwd):/var/www/html -dit --rm --name php ryananicholson/secure-web 
+      run: docker run -v $(pwd):/var/www/html -dit --rm --name php php:apache 
 
     # Run OWASP Scan and create Issue of results
     - name: OWASP ZAP Baseline Scan
